<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hamz.sehatalaislam.activity.NoInternetActivity">

    <LinearLayout
        android:id="@+id/linear_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin"
        android:paddingBottom="@dimen/activity_margin">

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:background="@color/buttonPrimary"
            android:text="@string/try_again"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_above="@id/linear_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lottie_fileName="network_lost.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true" />

        <TextView
            fontPath="fonts/Quicksand_Bold.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lost_connection_1"
            android:textSize="34dp"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/lost_connection_2" />


    </LinearLayout>


</RelativeLayout>
