<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="@dimen/activity_margin"
    android:paddingBottom="@dimen/activity_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--intro-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Intro"/>
    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="true">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:background="#3498db">

            <TextView
                android:id="@+id/Description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:text="@string/intro"
                android:textSize="12dip" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_weight="1"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            android:layout_margin="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/slideshow_chalk"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        fontPath="fonts/Source_Sans_Pro_Regular.otf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card_1_title"
                        android:textAlignment="center"
                        android:padding="8dp"
                        android:layout_centerInParent="true"
                        android:textSize="16sp"/>

                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_weight="1"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            android:layout_margin="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/slideshow_chalk"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        fontPath="fonts/Source_Sans_Pro_Regular.otf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card_2_title"
                        android:textAlignment="center"
                        android:padding="8dp"
                        android:layout_centerInParent="true"
                        android:textSize="16sp"/>

                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <!--cardview-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_weight="1"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            android:layout_margin="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/slideshow_chalk"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        fontPath="fonts/Source_Sans_Pro_Regular.otf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card_3_title"
                        android:textAlignment="center"
                        android:padding="8dp"
                        android:layout_centerInParent="true"
                        android:textSize="16sp"/>

                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_weight="1"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            android:layout_margin="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/slideshow_chalk"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        fontPath="fonts/Source_Sans_Pro_Regular.otf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card_4_title"
                        android:textAlignment="center"
                        android:padding="8dp"
                        android:layout_centerInParent="true"
                        android:textSize="16sp"/>

                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Recent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eaeaea"
            android:layout_marginBottom="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/red_primary_dark"
                android:padding="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_faint"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pusing Kepala"
                    android:textColor="@android:color/white"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>